# twitterclone

./: pyproject.toml
authentication/: forms.py  views.py
notification/: admin.py  models.py  views.py
notification/migrations/: 0001_initial.py  0002_auto_20200904_1809.py  0003_auto_20200904_1913.py
templates/: base.html  index.html  login.html  notification.html  profile.html  signup.html  tweet_detail.html
tweet/: admin.py  forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_twitter_user.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
