[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "building twitter clone"
authors = ["Albina1993 <alba.tleubergen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
django = "^3.1"
autopep8 = "^1.5.4"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
